test/mutation_analysis/s0198_house_robber/hafis/ablation_o3_full/mutants/16/result.txt
./test/mutation_analysis/s0198_house_robber/hafis/ablation_o3_full/mutants/16/Solution.java:29: error: unreachable statement
        for (int i = 2; false; i++) {
                                    ^
1 error
